--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="nav-container">
             <a href="#" class="logo">
-                <i class="fas fa-tshirt"></i> RAZU AHMED
+                <i class="fas fa-tshirt"></i> RMN 360
             </a>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="#home">Home</a></li>
